// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadLicense should display a modal when license requires acknowledgement 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
  role="main"
>
  <div
    class="euiPageContentBody"
  >
    <h1
      class="euiTitle css-1w464ad-euiTitle-m"
    >
      Upload your license
    </h1>
    <div
      class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
    />
    <div
      class="euiText css-1lo1kz-euiText-m"
    >
      <p>
        Your license key is a JSON file with a signature attached.
      </p>
      <p>
        Uploading a license will replace your current 
        <strong />
         license.
      </p>
    </div>
    <div
      class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
    />
    <div
      class="euiForm"
    >
      <div
        class="euiFilePicker euiFilePicker--large euiFilePicker--fullWidth"
      >
        <div
          class="euiFilePicker__wrap"
        >
          <input
            aria-describedby="licenseFile-filePicker__prompt"
            class="euiFilePicker__input"
            id="licenseFile"
            type="file"
          />
          <div
            class="euiFilePicker__prompt"
            id="licenseFile-filePicker__prompt"
          >
            <span
              aria-hidden="true"
              class="euiFilePicker__icon"
              data-euiicon-type="importAction"
            />
            <div
              class="euiFilePicker__promptText"
            >
              Select or drag your license file
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
      />
      <div
        class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <a
            class="euiButtonEmpty euiButtonEmpty--primary"
            data-test-subj="cancelUploadButton"
            href="/home"
            rel="noreferrer"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </a>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            class="euiButton euiButton--primary euiButton--fill"
            data-test-subj="uploadLicenseButton"
            type="button"
          >
            <span
              class="euiButtonContent euiButton__content"
            >
              <span
                class="euiButton__text"
              >
                Upload
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UploadLicense should display an error when ES says license is expired 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
  role="main"
>
  <div
    class="euiPageContentBody"
  >
    <h1
      class="euiTitle css-1w464ad-euiTitle-m"
    >
      Upload your license
    </h1>
    <div
      class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
    />
    <div
      class="euiText css-1lo1kz-euiText-m"
    >
      <p>
        Your license key is a JSON file with a signature attached.
      </p>
      <p>
        Uploading a license will replace your current 
        <strong />
         license.
      </p>
    </div>
    <div
      class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
    />
    <div
      class="euiForm"
    >
      <div
        aria-live="assertive"
        class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCallOut euiCallOut--danger euiForm__errors css-j9niqn-euiPanel-none-m-danger-euiCallOut"
        role="alert"
        tabindex="-1"
      >
        <p
          class="euiTitle euiCallOutHeader__title css-st4zhi-euiTitle-xs-euiCallOutHeader-danger"
        >
          Please address the highlighted errors.
        </p>
        <div
          class="euiText css-le6wmz-euiText-s-euiTextColor-default-euiCallOut__description"
        >
          <ul>
            <li
              class="euiForm__error"
            >
              The supplied license has expired.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="euiFilePicker euiFilePicker--large euiFilePicker--fullWidth"
      >
        <div
          class="euiFilePicker__wrap"
        >
          <input
            aria-describedby="licenseFile-filePicker__prompt"
            class="euiFilePicker__input"
            id="licenseFile"
            type="file"
          />
          <div
            class="euiFilePicker__prompt"
            id="licenseFile-filePicker__prompt"
          >
            <span
              aria-hidden="true"
              class="euiFilePicker__icon"
              data-euiicon-type="importAction"
            />
            <div
              class="euiFilePicker__promptText"
            >
              Select or drag your license file
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
      />
      <div
        class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <a
            class="euiButtonEmpty euiButtonEmpty--primary"
            data-test-subj="cancelUploadButton"
            href="/home"
            rel="noreferrer"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </a>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            class="euiButton euiButton--primary euiButton--fill"
            data-test-subj="uploadLicenseButton"
            type="button"
          >
            <span
              class="euiButtonContent euiButton__content"
            >
              <span
                class="euiButton__text"
              >
                Upload
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UploadLicense should display an error when ES says license is invalid 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
  role="main"
>
  <div
    class="euiPageContentBody"
  >
    <h1
      class="euiTitle css-1w464ad-euiTitle-m"
    >
      Upload your license
    </h1>
    <div
      class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
    />
    <div
      class="euiText css-1lo1kz-euiText-m"
    >
      <p>
        Your license key is a JSON file with a signature attached.
      </p>
      <p>
        Uploading a license will replace your current 
        <strong />
         license.
      </p>
    </div>
    <div
      class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
    />
    <div
      class="euiForm"
    >
      <div
        aria-live="assertive"
        class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCallOut euiCallOut--danger euiForm__errors css-j9niqn-euiPanel-none-m-danger-euiCallOut"
        role="alert"
        tabindex="-1"
      >
        <p
          class="euiTitle euiCallOutHeader__title css-st4zhi-euiTitle-xs-euiCallOutHeader-danger"
        >
          Please address the highlighted errors.
        </p>
        <div
          class="euiText css-le6wmz-euiText-s-euiTextColor-default-euiCallOut__description"
        >
          <ul>
            <li
              class="euiForm__error"
            >
              The supplied license is not valid for this product.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="euiFilePicker euiFilePicker--large euiFilePicker--fullWidth"
      >
        <div
          class="euiFilePicker__wrap"
        >
          <input
            aria-describedby="licenseFile-filePicker__prompt"
            class="euiFilePicker__input"
            id="licenseFile"
            type="file"
          />
          <div
            class="euiFilePicker__prompt"
            id="licenseFile-filePicker__prompt"
          >
            <span
              aria-hidden="true"
              class="euiFilePicker__icon"
              data-euiicon-type="importAction"
            />
            <div
              class="euiFilePicker__promptText"
            >
              Select or drag your license file
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
      />
      <div
        class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <a
            class="euiButtonEmpty euiButtonEmpty--primary"
            data-test-subj="cancelUploadButton"
            href="/home"
            rel="noreferrer"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </a>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            class="euiButton euiButton--primary euiButton--fill"
            data-test-subj="uploadLicenseButton"
            type="button"
          >
            <span
              class="euiButtonContent euiButton__content"
            >
              <span
                class="euiButton__text"
              >
                Upload
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UploadLicense should display an error when submitting invalid JSON 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
  role="main"
>
  <div
    class="euiPageContentBody"
  >
    <h1
      class="euiTitle css-1w464ad-euiTitle-m"
    >
      Upload your license
    </h1>
    <div
      class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
    />
    <div
      class="euiText css-1lo1kz-euiText-m"
    >
      <p>
        Your license key is a JSON file with a signature attached.
      </p>
      <p>
        Uploading a license will replace your current 
        <strong />
         license.
      </p>
    </div>
    <div
      class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
    />
    <div
      class="euiForm"
    >
      <div
        aria-live="assertive"
        class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCallOut euiCallOut--danger euiForm__errors css-j9niqn-euiPanel-none-m-danger-euiCallOut"
        role="alert"
        tabindex="-1"
      >
        <p
          class="euiTitle euiCallOutHeader__title css-st4zhi-euiTitle-xs-euiCallOutHeader-danger"
        >
          Please address the highlighted errors.
        </p>
        <div
          class="euiText css-le6wmz-euiText-s-euiTextColor-default-euiCallOut__description"
        >
          <ul>
            <li
              class="euiForm__error"
            >
              Error encountered uploading license: Check your license file.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="euiFilePicker euiFilePicker--large euiFilePicker--fullWidth"
      >
        <div
          class="euiFilePicker__wrap"
        >
          <input
            aria-describedby="licenseFile-filePicker__prompt"
            class="euiFilePicker__input"
            id="licenseFile"
            type="file"
          />
          <div
            class="euiFilePicker__prompt"
            id="licenseFile-filePicker__prompt"
          >
            <span
              aria-hidden="true"
              class="euiFilePicker__icon"
              data-euiicon-type="importAction"
            />
            <div
              class="euiFilePicker__promptText"
            >
              Select or drag your license file
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
      />
      <div
        class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <a
            class="euiButtonEmpty euiButtonEmpty--primary"
            data-test-subj="cancelUploadButton"
            href="/home"
            rel="noreferrer"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </a>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            class="euiButton euiButton--primary euiButton--fill"
            data-test-subj="uploadLicenseButton"
            type="button"
          >
            <span
              class="euiButtonContent euiButton__content"
            >
              <span
                class="euiButton__text"
              >
                Upload
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UploadLicense should display error when ES returns error 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
  role="main"
>
  <div
    class="euiPageContentBody"
  >
    <h1
      class="euiTitle css-1w464ad-euiTitle-m"
    >
      Upload your license
    </h1>
    <div
      class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
    />
    <div
      class="euiText css-1lo1kz-euiText-m"
    >
      <p>
        Your license key is a JSON file with a signature attached.
      </p>
      <p>
        Uploading a license will replace your current 
        <strong />
         license.
      </p>
    </div>
    <div
      class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
    />
    <div
      class="euiForm"
    >
      <div
        aria-live="assertive"
        class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCallOut euiCallOut--danger euiForm__errors css-j9niqn-euiPanel-none-m-danger-euiCallOut"
        role="alert"
        tabindex="-1"
      >
        <p
          class="euiTitle euiCallOutHeader__title css-st4zhi-euiTitle-xs-euiCallOutHeader-danger"
        >
          Please address the highlighted errors.
        </p>
        <div
          class="euiText css-le6wmz-euiText-s-euiTextColor-default-euiCallOut__description"
        >
          <ul>
            <li
              class="euiForm__error"
            >
              Error encountered uploading license: Can not upgrade to a production license unless TLS is configured or security is disabled
            </li>
          </ul>
        </div>
      </div>
      <div
        class="euiFilePicker euiFilePicker--large euiFilePicker--fullWidth"
      >
        <div
          class="euiFilePicker__wrap"
        >
          <input
            aria-describedby="licenseFile-filePicker__prompt"
            class="euiFilePicker__input"
            id="licenseFile"
            type="file"
          />
          <div
            class="euiFilePicker__prompt"
            id="licenseFile-filePicker__prompt"
          >
            <span
              aria-hidden="true"
              class="euiFilePicker__icon"
              data-euiicon-type="importAction"
            />
            <div
              class="euiFilePicker__promptText"
            >
              Select or drag your license file
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
      />
      <div
        class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <a
            class="euiButtonEmpty euiButtonEmpty--primary"
            data-test-subj="cancelUploadButton"
            href="/home"
            rel="noreferrer"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </a>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            class="euiButton euiButton--primary euiButton--fill"
            data-test-subj="uploadLicenseButton"
            type="button"
          >
            <span
              class="euiButtonContent euiButton__content"
            >
              <span
                class="euiButton__text"
              >
                Upload
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
